# Solving_a_business_problem

./: CMakeLists.txt  README.md  Solving_a_business_problem.cpp  Solving_a_business_problem.sln  Solving_a_business_problem.vcxproj  Solving_a_business_problem.vcxproj.filters
